# clp-wasm

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  action.yaml  build.bat  build.sh  bundle-with-wasm.js  clp-wasm.d.ts  clp-wasm.js  clp-wasm.wasm  gh-deploy.sh  index.html  package-lock.json  package.json  solver.js  solver.test.ts
.github/workflows/: main.yml
clp/: .clang-format
clp/excluded/: Clp_C_Interface.cpp  Coin_C_defines.h
clp/src/: CbcOrClpParam.cpp  CbcOrClpParam.hpp  ClpCholeskyBase.cpp  ClpCholeskyBase.hpp  ClpCholeskyDense.cpp  ClpCholeskyDense.hpp  ClpCholeskyMumps.hpp  ClpCholeskyPardiso.cpp  ClpCholeskyPardiso.hpp  ClpCholeskyTaucs.cpp  ClpCholeskyTaucs.hpp  ClpCholeskyUfl.hpp  ClpCholeskyWssmp.hpp  ClpCholeskyWssmpKKT.hpp  ClpConstraint.cpp  ClpConstraint.hpp  ClpConstraintLinear.cpp  ClpConstraintLinear.hpp  ClpConstraintQuadratic.cpp  ClpConstraintQuadratic.hpp  ClpDualRowDantzig.cpp  ClpDualRowDantzig.hpp  ClpDualRowPivot.hpp  ClpDualRowSteepest.cpp  ClpDualRowSteepest.hpp  ClpDummyMatrix.cpp  ClpDummyMatrix.hpp  ClpDynamicExampleMatrix.cpp  ClpDynamicExampleMatrix.hpp  ClpDynamicMatrix.cpp  ClpDynamicMatrix.hpp  ClpEventHandler.cpp  ClpFactorization.cpp  ClpFactorization.hpp  ClpGubDynamicMatrix.cpp  ClpGubDynamicMatrix.hpp  ClpGubMatrix.cpp  ClpGubMatrix.hpp  ClpHelperFunctions.cpp  ClpHelperFunctions.hpp  (+174 more)
common/: floatdef.h  memstream.h  post-worker.js  post.js  pre.js
cpplex/app/: solver.cc
cpplex/src/: columnset.cc  constraint.cc  matrix.h  objectivefunction.cc  objectivefunction.h
example/: index.html
pilal/include/: matrix.h
pilal/src/: matrix.cc
problems/: a.py  infeasible.problem  p1.problem  p2-15vars.problem  small.problem  test.problem  tinlake-4vars-small.mps  tinlake-base.problem  tinlake-real.lp  tinlake-real.problem  tinlake-test-new.problem  tinlake-test.lp  tinlake-test.problem
simplex/include/: columnset.h  constraint.h  datamismatchexception.h  matrix.h  objectivefunction.h  simplex.h  variable.h
simplex/src/: columnset.cc  constraint.cc  matrix.cc  objectivefunction.cc  simplex.cc  variable.cc
solver/: ClpWrapper.cc  ClpWrapper.h  ProblemLoader.cc  ProblemLoader.h  bindings.cc  problem.cc  problem.h  solver.cc  wrapper.cc  wrapper.h
tests/: test.js
tests/bench/: big_numbers.json  diet_large.json  lp.json  lp_integer.json  tinlake.json  tinlake_integer.json
tests/data/: big_numbers.lp  tinlake.json
web/: cpplex.js  cpplex.wasm  cpplex.wasm.map  index.html  solver.js  solver.wasm  solver.wasm.map
